# path-tracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  tracermath.h
